         reads (e.g. not a spectrum file).
Week of May 14, 2007
       - BZ 297 - Make axis tick marks draw correctly if there's only one channel in 
        the spectrum (well really just don't draw tick marks at all.
       - Add code to support gate observers.. for new displayer.
       - Add -trace subcommand to gate.
       - Fix error in TreeParameter/SpectrumGenerator.tcl -state normal not
          -state enabled.
       - Fix error in TreeParameter/SpectrumGenerator.tcl - Duplicate button
         did not correctly decode parameters of spectrum being duplicated.
       - Add docs for the gate -trace subcommand to the web docs.
       - Fix CNSCLJumboBuffer::size32() member, was not correctly picking up 
         the buffer revision level.
Week of May 24, 2007
       - Only clear gates that are worth clearing.
Week of May 28,l 2007
       - Fix channel position to pixel position coversions which had
         the width of a channel to be too large (too few channels in displayed
         range.
       - Do some jiggerypokery with 1-d gates to make them more consistent with
         their integration:
         o On acceptance the right point is adjusted to the right by a channel.
         o Gate checking is now exclusive of the right point.
         o On entering in the display the adjustment is un-done so that
           Xamine will display correctly.
 Week of June 4, 2007
       - Ensure that Xamine's SuperPrompt::SetList message boxes
         from Xamine_error_msg() get displayed by making them
         children of the prompter's parent rather than of the prompter
         which, after all is hidden.
 Week of June 11, 2007
       - Get nice support for ubuntu edgy eft.
 Week of June 25, 2007
       - Begin adding the 'integrate' command.
 Week of July 2, 2007
       - 2-d integrations in Xamine had displayed standard deviations not
         fwhm's as advertised.
       - Add docs for integrate command.