@@ -690,3 +690,5 @@ Week of May 28,l 2007
        - 2-d integrations in Xamine had displayed standard deviations not
          fwhm's as advertised.
        - Add docs for integrate command.
+Week of July 9, 2007
+       - Corrected CPacket.cpp for jumbos in scriptable.
